--- a/client/style/style.css
+++ b/client/style/style.css
@@ -19,3 +19,11 @@ body {
   padding-bottom: 40px;
   height: 100vh;
 }
+
+.formtitle {
+  text-align: center;
+}
+
+.formbutton {
+  margin-top: 20px;
+}
